HomeLayout Changed Fonts Updated Colors Updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SecondStory"></activity>
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".FourthStory"></activity>
+        <activity android:name=".ThirdStory" />
+        <activity android:name=".SecondStory" />
+        <activity
+            android:name=".HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".splashscreen"
             android:theme="@style/AppTheme.NoActionBar">
