--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.airbnb.android:lottie:3.4.0'
 
 }
