--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+
 
 }
