--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
     }
 }
 
+
+apply plugin: 'com.jakewharton.butterknife'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -34,6 +37,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.airbnb.android:lottie:3.4.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+
+
+
+
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+
+
 
 
 }
