--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.airbnb.android:lottie:3.4.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 
 
     implementation 'com.jakewharton:butterknife:10.2.1'
