Revert to Original Version

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@
 /Fifth Ver.zip
 /Fourth Ver.zip
 /Fourth Ver 1.zip
+/app/.settings/org.eclipse.buildship.core.prefs
+/app/.classpath
+/app/.project
+/.settings/org.eclipse.buildship.core.prefs
+/.vscode/settings.json
+/.project
